fleshed out the setup of the js and css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1>hoi</h1>
-      <div class="js-video"></div>
+      <h1>Video loader</h1>
+      <div class="video js-video" data-video="https://www.youtube.com/watch?v=5QTsTVk7viE"></div>
     </div>
   </body>
 </html>
