--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="includes/script/video-loader.js"></script>
     <script type="text/javascript" src="includes/script/script.js"></script>
     <title>Video Loader</title>
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <div class="wrapper">
